--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ p,h1{
     width: 100%;
     padding: 0 10px;
 }
+/* Header */
 select{
     border: none;
     outline: none;
@@ -62,6 +63,8 @@ select{
 }
 .header__middle-container{
     display: flex;
+    height: 100%;
+    align-items: center;
 }
 .logo{
     width: 260px;
@@ -78,6 +81,8 @@ select{
     width: 100%;
     outline: none;
     border: none;
+    height: 100%;
+    padding: 15px 25px;
 }
 .search__select-wrap{
     height: 100%;
@@ -96,27 +101,37 @@ select{
     background: #7AC751;
     height: 100%;
 }
+
 .profile__menu{
     width: 120px;
-    background: #7AC751;
+    height: min-content;
+    display: flex;
+    align-items: center;
 }
 .association{
     display: flex;
     justify-content: space-between;
     width: 100%;
+    height: 100%;
+    align-items: center;
+}
+.menu__item{
+    margin-left: 21px;
+}
+.menu__item:first-child{
+    margin: 0;
 }
 .row__nav{
     height: 67px;
     background-color: #F7F8FA;
 }
 .row__nav-all{
-    font-size: 16px;
+    flex-shrink: 0;
     color: white;
     font-weight: 400;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
     width: 260px;
     background-color: #7AC751;
 }
@@ -135,10 +150,9 @@ select{
     height: 100%;
 }
 .row__nav-list{
-    position: absolute;
+
     align-items: center;
     justify-content: center;
-    width: 1180px;
     height: 67px;
     display: flex;
 }
@@ -146,13 +160,12 @@ select{
     margin-left: 65px;
 }
 .row__nav-item:first-child{
-    margin-left: 0px;
+    margin-left: 82px;
 }
 .column__nav{
     width: 260px;
 }
 .column__nav-list{
-    height: 100%;
     width: 100%;
     background-color: #F7F8FA;
 }
@@ -168,6 +181,113 @@ select{
     display: flex;
 }
 .header__content{
-    padding-top: 11px;
-    padding-left: 11px;
+    width: 100%;
+    background-color: #F1FAFF;
+}
+.header__baner{
+    padding: 0 39px;
+    display: flex;
+    height: 100%;
+    width: 100%;
+}
+.header__baner-text {
+    width: 318px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.header__baner-collection {
+    font-size: 22px;
+    margin-bottom: 6px;
+    color: #7AC751;
+}
+.header__baner__title {
+    margin-bottom: 26px;
+    color: #2F2F2F;
+    font-weight: 500;
+    font-size: 40px;
+}
+.header__baner-discount {
+    font-weight: 400;
+    font-size: 27px;
+    color: #515151;
+    margin-bottom: 35px;
+}
+.header__baner-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 400;
+    background-color: #7AC751;
+    color: white;
+    width: 129px;
+    height: 40px;
+    border-radius: 5px;
+}
+.title-span{
+    border-bottom: 6px solid #7AC751;
+    border-radius: 10% 10% 10% 10%;
+}
+.header__baner-preview {
+    display: flex;
+    align-items: center;
+}
+.similar-products-list {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.similar__item {
+    background-color: white;
+    width: 98px;
+    height: 91px;
+    border-radius: 10px;
+    text-align: center;
+    padding: 5px;
+}
+.similar__img {
+    text-align: center;
+}
+.similar__price {
+    font-size: 11px;
+    font-weight: 550;
+    color: #7AC751;
+}
+.similar__description {
+    font-size: 7px;
+    font-weight: 500;
+    color: #555555;
+}
+/* Main */
+.feature{
+    margin-top: 60px;
+    margin-bottom: 70px;
+    display: flex;
+    justify-content: space-between;
+}
+.offer__list{
+    height: 511px;
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+}
+.offer__item{
+    width: 485px;
+    height: 247px;
+}
+.offer__item--big{
+    background: url(/img/Mask\ Group.svg);
+    width: 669px;
+    height: 100%;
+}
+.offer__small-list{
+    height: 100%;
+}
+.item-top{
+    background: url(/img/Rectangle\ 33.svg) no-repeat;
+}
+.item-bottom{
+    background: url(/img/Rectangle\ 34.png);
 }
