--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ p,h1{
 }
 /* Header */
 select{
-    border: none;
     outline: none;
+    border-color: white;
 }
 .header__top-container{
     display: flex;
@@ -36,7 +36,7 @@ select{
     align-items: center;
 }
 .lang__switcher{
-    border: none;
+    border-color: #7AC751;
     background-color: #7AC751;
     color: white;
     outline: none;
@@ -84,6 +84,42 @@ select{
     height: 100%;
     padding: 15px 25px;
 }
+.nav__aside-icon{
+    display: flex;
+    background-color: #7AC751;
+    width: 260px;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+.nav__aside-burger{
+    width: 24px;
+    height: 17px;
+    position: relative;
+    margin-right: 20px;
+    cursor: pointer;
+}
+.nav__aside-burger-el, .nav__aside-burger-el::after, .nav__aside-burger-el::before{
+    background-color: white;
+    height: 2.5px;
+    display: block;
+    border-radius: 2px;
+}
+.nav__aside-burger-el{
+    width: 100%;
+}
+.nav__aside-burger-el::after{
+    content: '';
+    width: 58%;
+    position: absolute;
+    top: 7px;
+}
+.nav__aside-burger-el::before{
+    content: '';
+    width: 33%;
+    top: 14px;
+    position: absolute;
+}
 .search__select-wrap{
     height: 100%;
     margin-right: 21px;
@@ -125,26 +161,6 @@ select{
     height: 67px;
     background-color: #F7F8FA;
 }
-.row__nav-all{
-    flex-shrink: 0;
-    color: white;
-    font-weight: 400;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 260px;
-    background-color: #7AC751;
-}
-.row__nav-all::before{
-    margin-right: 24px;
-    margin-bottom: 5px;
-    content: '';
-    display: block;
-    width: 24px;
-    height: 24px;
-    background-image: url(/img/menu\ 1.svg);
-    background-repeat: no-repeat;
-}
 .row__nav-container{
     display: flex;
     height: 100%;
@@ -183,9 +199,13 @@ select{
 .header__content{
     width: 100%;
     background-color: #F1FAFF;
+    margin-top: 12px;
+    margin-left: 12px;
 }
 .header__baner{
-    padding: 0 39px;
+    border-radius: 1px;
+    padding-right: 39px;
+    padding-left: 47px;
     display: flex;
     height: 100%;
     width: 100%;
@@ -224,14 +244,37 @@ select{
     width: 129px;
     height: 40px;
     border-radius: 5px;
+    cursor: pointer;
 }
 .title-span{
     border-bottom: 6px solid #7AC751;
     border-radius: 10% 10% 10% 10%;
 }
+.circle{
+    border-radius: 50%;
+    background-color: rgba(122, 199, 81,0.29);
+    width: 12px;
+    height: 12px;
+    bottom: 0;
+    margin-right: 15px;
+}
+.circle:last-child{
+    margin-right: 0;
+    margin-left: 15px;
+}
+.circle-active{
+    background: #7AC751;
+    height: 100%;
+    width: 24px;
+    border-radius: 6px;
+}
 .header__baner-preview {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.circle-list{
+    display: flex;
 }
 .similar-products-list {
     height: 100%;
@@ -276,18 +319,135 @@ select{
 .offer__item{
     width: 485px;
     height: 247px;
+    padding: 49px 24px;
+}
+.offer__title{
+    margin-bottom: 10px;
+    font-size: 20px;
+    color: #555555;
+    font-weight: 400;
+}
+.offer__item--big .offer__title{
+    font-weight: 600;
+}
+.offer__price{
+    font-size: 20px;
+    font-weight: 400;
+    color: #7AC751;
+    margin-bottom: 13px;
+}
+.offer__details{
+    color: #757575;
+}
+.offer__price-span{
+    font-weight: 700;
+    font-size: 20px;
 }
 .offer__item--big{
+    padding: 49px 31px;
     background: url(/img/Mask\ Group.svg);
-    width: 669px;
     height: 100%;
+    flex: 1 1 auto;
 }
 .offer__small-list{
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 20px;
 }
 .item-top{
     background: url(/img/Rectangle\ 33.svg) no-repeat;
 }
 .item-bottom{
     background: url(/img/Rectangle\ 34.png);
+}
+/* Trending */
+.title{
+    margin-bottom: 45px;
+    font-size: 36px;
+    font-weight: 600;
+    color: #555555;
+    text-align: center;
+    margin-top: 120px;
+}
+.trending__category{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 75px;
+}
+.category__item{
+    margin-left: 70px;
+    color: #C2C2C2;
+    font-size: 24px;
+    font-weight: 400;
+}
+.category__item:first-child{
+    margin-left: 0;
+    
+}
+.selected{
+    color: #7AC751;
+}
+/*.ssuper{
+    margin-top: 120px;
+    margin-bottom: 70px;
+    width: 100%;
+    text-align: center;
+}*/
+.trending-first-row .trending__item:last-child{
+    margin-right: 0;
+}
+.trending__item{
+    height: 387px;
+    margin-right: 30px;
+    width: 270px;
+}
+.trending-first-row{
+    margin-bottom: 45px;
+    display: flex;
+}
+.trending-two-row{
+    display: flex;
+}
+.trending__list{
+    flex-wrap: wrap;
+    display: flex;
+}
+.trending__item-type {
+    margin-top: 15px;
+    font-size: 14px;
+    color: rgba(117, 117, 117,0.71);
+    
+}
+.trending__item-name {
+    font-size: 20px;
+    color: #555555;
+}
+.prices {
+    display: flex;
+    font-size: 18px;
+}
+.trending__item-price {
+    margin-right: 9px;
+    color: #7AC751;
+    font-weight: 600;
+}
+.trending__item-old-price {
+    font-weight: 400;
+    color: #CCCCCC;
+    text-decoration: line-through;
+}
+.trending__rating{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    text-align: end;
+}
+.trending__item-description{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
