--- a/css/style.css
+++ b/css/style.css
@@ -338,6 +338,17 @@ select{
 }
 .offer__details{
     color: #757575;
+    position: relative;
+}
+.offer__details::after{
+    content: '';
+    display: block;
+    background-image: url(/img/star.png);
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    top: 4px;
+    left: 85px;
 }
 .offer__price-span{
     font-weight: 700;
@@ -400,8 +411,8 @@ select{
 }
 .trending__item{
     height: 387px;
-    margin-right: 30px;
     width: 270px;
+    grid-column: span 3;
 }
 .trending-first-row{
     margin-bottom: 45px;
@@ -411,22 +422,55 @@ select{
     display: flex;
 }
 .trending__list{
-    flex-wrap: wrap;
-    display: flex;
+    display: grid;
+    column-gap: 30px;
+    row-gap: 45px;
+    grid-template-columns: repeat(12, auto);
 }
 .trending__item-type {
+    margin-bottom: 7px;
     margin-top: 15px;
     font-size: 14px;
     color: rgba(117, 117, 117,0.71);
     
 }
+.trending__img-wrap{
+    position: relative;
+}
+.feature__hover-item{
+    width: 39px;
+    height: 39px;
+    border-radius: 50%;
+    background-color: white;
+    bottom: 0;
+    right: 0;
+    margin-bottom: 8px;
+}
 .trending__item-name {
+    margin-bottom: 15px;
     font-size: 20px;
     color: #555555;
 }
 .prices {
     display: flex;
     font-size: 18px;
+}
+.trending__feature-hover{
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(102,102,102,0.4);
+    width: 100%;
+    height: 100%;
+    align-items: flex-end;
+    padding: 15px;
+    justify-content: flex-end;
+    transition: 2s;
+}
+.trending__img-wrap:hover .trending__feature-hover{
+    display: flex;
 }
 .trending__item-price {
     margin-right: 9px;
