--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,27 @@ select{
     align-items: center;
     justify-content: center;
     color: white;
+    flex-shrink: 0;
+}
+.trending__item-sticker{
+    position: absolute;
+    width: 45px;
+    height: 20px;
+    border-radius: 0 0 5px 0;
+    color: white;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sticker-new{
+    background-color: #00B7F1;
+}
+.sticker-sale{
+    background-color: #7AC751;
+}
+.sticker-discount{
+    background-color: #FF6868;
 }
 .nav__aside-burger{
     width: 24px;
@@ -247,8 +268,18 @@ select{
     cursor: pointer;
 }
 .title-span{
-    border-bottom: 6px solid #7AC751;
-    border-radius: 10% 10% 10% 10%;
+    position: relative;
+}
+.title-span::after{
+    content: "";
+    position: absolute;
+    background: url(/img/Frame.png);
+    width: 100%;
+    height: 11px;
+    display: block;
+    bottom: 0;
+    right: 0;
+    margin-top: 4px;
 }
 .circle{
     border-radius: 50%;
@@ -436,6 +467,9 @@ select{
 }
 .trending__img-wrap{
     position: relative;
+    transition: 2s all;
+    overflow: hidden;
+    height: 287px;
 }
 .feature__hover-item{
     width: 39px;
@@ -445,6 +479,19 @@ select{
     bottom: 0;
     right: 0;
     margin-bottom: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.feature__hover-list{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding: 7px;
 }
 .trending__item-name {
     margin-bottom: 15px;
@@ -456,21 +503,28 @@ select{
     font-size: 18px;
 }
 .trending__feature-hover{
-    display: none;
-    flex-direction: column;
+    overflow: hidden    ;
     position: absolute;
     top: 0;
     left: 0;
-    background: rgba(102,102,102,0.4);
-    width: 100%;
     height: 100%;
-    align-items: flex-end;
-    padding: 15px;
-    justify-content: flex-end;
-    transition: 2s;
+    background: rgba(102,102,102,0.4);
+    width: 0%;
+    transition: 1s all;
 }
 .trending__img-wrap:hover .trending__feature-hover{
+    width: 100%;
+    /* padding: 15px; */
+}
+.feature__hover-item:hover{
+    background-color: #7AC751;
+}
+.feature__hover-item:hover path{
+    fill: white;
+}
+.trending__item-footer{
     display: flex;
+    justify-content: space-between;
 }
 .trending__item-price {
     margin-right: 9px;
@@ -494,4 +548,35 @@ select{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+.trending__flipper-wrap{
+    display: flex;
+    margin-top: 50px;
+    width: 100%;
+    justify-content: center;
+}
+.trending__flipper{
+    border-color: #CCCCCC;
+    width: 24px;
+    height: 24px;
+    background-color: white;
+    border: 4px solid #CCCCCC;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 14px;
+    cursor: pointer;
+}
+.trending__flipper:last-child{
+    margin-right: 0;
+}
+.trending .selected{
+    border-color: #7AC751;
+}
+.flipper__inner{
+    border: 4px solid;
+    border-radius: 50%;
+    flex-shrink: 0;
+    border-color: inherit;
 }
