--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 footer{
     margin-top: 115px;
-}
+}   
 .footer__content-top{
     border-bottom: 1px solid rgba(150, 150, 150,0.3);
     height: 100%;
@@ -19,19 +19,30 @@ footer{
 }
 .footer__about{
     width: 306px;
-    line-height: 32px;
     flex-shrink: 0;
+    line-height: 32px;
 }
 .footer__content-top .container{
+    justify-content: space-between;
     display: flex;
 }
 .footer__column{
-    flex-shrink: 0;
-    line-height: 40px;
-    height: 200px;
+    margin-bottom: 50px;
+    height: max-content;
     width: max-content;
+    flex-shrink: 0;
+    font-size: 18px;
+    color: #555555;
 }
 .footer__column-title{
-    font-size: 18px;
     font-weight: 500;
+}
+.footer .logo{
+    margin-bottom: 15px;
+}
+.footer__column-links{
+    line-height: 40px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
 }
