--- a/css/blog.css
+++ b/css/blog.css
@@ -1,6 +1,3 @@
-.blog__item-background{
-    position: absolute;
-}
 .blog__item-info{
     position: relative;
     color: white;
@@ -13,7 +10,8 @@
 .blog__item-list{
     gap: 22px;
     display: grid;
-    grid-template-columns: repeat(12, auto);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2,455px);
 }
 .blog__item-classif{
     display: flex;
@@ -48,9 +46,9 @@
 }
 .blog__item{
     font-family: 'Mulish', sans-serif;
-    grid-column: span 6;
-    width: 570px;
-    height: 455px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
 }
 .blog__name{
     margin-bottom: 20px;
@@ -60,4 +58,16 @@
 .blog__details{
     font-size: 14px;
     font-weight: 500;
+}
+.blog__item-background{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+.blog__item-img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
