--- a/css/header.css
+++ b/css/header.css
@@ -40,15 +40,13 @@ select {
     display: flex;
     align-items: center;
 }
-
+.header .logo{
+    margin-right: 120px;
+}
 .header__middle-container {
     display: flex;
     height: 100%;
     align-items: center;
-}
-
-.logo {
-    width: 260px;
 }
 .search__content {
     width: 582px;
@@ -218,6 +216,7 @@ select {
 }
 
 .header__baner {
+    position: relative;
     border-radius: 1px;
     padding-right: 39px;
     padding-left: 47px;
@@ -287,7 +286,6 @@ select {
     border-radius: 50%;
     background-color: rgba(122, 199, 81, 0.29);
     width: 12px;
-    height: 12px;
     bottom: 0;
     margin-right: 15px;
 }
@@ -311,6 +309,13 @@ select {
 }
 
 .circle-list {
+    margin-bottom: 22px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    justify-content: center;
+    height: 12px;
+    position: absolute;
     display: flex;
 }
 
