--- a/css/our-prod.css
+++ b/css/our-prod.css
@@ -10,7 +10,7 @@
     margin-top: 15px;
     font-size: 14px;
     color: rgba(117, 117, 117, 0.71);
-
+    text-transform: uppercase;
 }
 
 .our-products__img-wrap {
