--- a/css/trending.css
+++ b/css/trending.css
@@ -37,7 +37,7 @@
     margin-top: 15px;
     font-size: 14px;
     color: rgba(117, 117, 117, 0.71);
-
+    text-transform: uppercase;
 }
 .trending__preview{
     width: 100%;
