--- a/css/review.css
+++ b/css/review.css
@@ -1,5 +1,5 @@
 .review__item{
-    width: 816px;
+    width: 100%;
     height: 312px;
     text-align: center;
     flex-shrink: 0;
@@ -10,10 +10,19 @@
     margin-top: 50px;
     position: relative;
 }
+.review{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .review__list{
     display: flex;
     height: 352px;
     margin: 0 26px;
+    width: 100%;
+}
+.review__list-wrap .swiper{
+    width: 816px;
 }
 .swiper__button{
     display: flex;
@@ -34,15 +43,17 @@
     margin-top: -44px;
 }
 .review__list-wrap{
-    align-items: center;
     width: 100%;
-    display: flex;
-    justify-content: center;
+    position: relative;
+    align-items: center;
+    max-width: 1034px;
+    text-align: center;
 }
 .switch__button{
     justify-content: center;
     align-items: center;
     display: flex;
+    position: absolute; 
     width: 76px;
     height: 76px;
     background-color: white;
